--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,7 @@
 == README
 
 Coder Manual 
-Subscription based web application
+Subscription based web application for codermanual.com
 
 
 This README would normally document whatever steps are necessary to get the
